# RMV-task04

./: CMakeLists.txt  README.md  hik_camera.cpp  launch_camera_and_rviz.sh  package.xml  run_camera.sh
config/: hik_camera_params.yaml  rviz_config.rviz  work_camera_view.rviz
include/hk_camera/: hk_camera_node.hpp
launch/: camera.launch.py  hik_camera_launch.py
src/: hk_camera_node.cpp  hk_camera_node_main.cpp
